# Technopark-IZ-2021

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  books.c  books.h  coverage.html  main.c  test_books.cpp
lib/include/: lib.h
lib/lib_shared/: CMakeLists.txt
lib/lib_shared/src/: lib_shared.c
lib/lib_shared/tests/: CMakeLists.txt  test_lib_shared.cpp
lib/lib_static/: CMakeLists.txt
lib/lib_static/src/: lib_static.c
lib/lib_static/tests/: CMakeLists.txt
lib_static/: CMakeLists.txt
lib_static/include/: lib_static.h
lib_static/src/: lib_static.c
lib_static/tests/: test_lib_static.cpp
tests/: CMakeLists.txt  test_stress.cpp
tests/additional/: CMakeLists.txt
tests/additional/include/: test_stress_shared.h  test_stress_static.h
tests/additional/src/: test_stress_shared.c  test_stress_static.c
